# sacn

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_receiver.rs  merge_receiver.rs  source.rs  source_console.rs  source_detector.rs
examples/common/: tui.rs
examples/embassy/: Cargo.toml  README.md  rust-toolchain.toml
examples/embassy/.cargo/: config.toml
examples/embassy/src/: animation.rs  main.rs
examples/synchronization/: main.rs  relay.rs  ui.rs
extras/merge-lab/: Cargo.toml  README.md  build.rs
extras/merge-lab/benches/: merge.rs
extras/merge-lab/src/: etc_ffi.rs  full_remerge.rs  incremental.rs  lib.rs  sacn_merger.rs  simd_remerge_aarch64.rs  simd_remerge_x86.rs  workload.rs
extras/merge-lab/tests/: oracle.proptest-regressions  oracle.rs
fuzz/: Cargo.toml  README.md  parse.dict
fuzz/fuzz_targets/: parse.rs
fuzz/seed_corpus/parse/: data_empty  data_full  data_levels  data_pap  discovery  discovery_empty  sync
scripts/ci/: sync_release_versions.py
src/: error.rs  lib.rs  log.rs  proto.rs  static_storage.rs  storage.rs  time.rs  types.rs
src/adapters/: error.rs  mod.rs  net.rs  sending.rs
src/adapters/embassy/: basic.rs  basic_tests.rs  detector.rs  detector_tests.rs  error.rs  merging.rs  merging_tests.rs  mod.rs  sending.rs  sending_tests.rs  source.rs  source_tests.rs  storage.rs
src/adapters/tokio/: basic.rs  basic_tests.rs  detector.rs  detector_tests.rs  merging.rs  merging_tests.rs  mod.rs  source.rs  source_tests.rs
src/detector/: event.rs  mod.rs  tests.rs
src/merger/: mod.rs  tests.rs
src/packet/: cursor.rs  mod.rs  tests.rs
src/receiver/: basic.rs  event.rs  loss.rs  merging.rs  merging_tests.rs  mod.rs  property_tests.rs  source.rs  tests.rs
src/receiver/basic/: event.rs
src/receiver/merging/: event.rs
src/secure/: hash.rs  mod.rs  tests.rs
src/source/: mod.rs  property_tests.rs  tests.rs  transmit.rs
tests/: public_api.rs  static_storage.rs
tests/proptest-regressions/receiver/: property_tests.txt
tests/snapshots/: public-api.txt
xtask/: Cargo.toml
xtask/src/: main.rs
