[workspace]
members = ["extras/merge-lab", "xtask"]

[package]
name = "x39-sacn"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "A full-featured, production-ready, no_std-friendly implementation of the sACN (ANSI E1.31) protocol."
license = "MIT"
repository = "https://github.com/x39-tech/sacn"
readme = "README.md"
keywords = ["sacn", "e131", "dmx", "dmx512", "lighting"]
categories = ["network-programming", "embedded", "no-std"]

[lib]
# The published package is `x39-sacn`, but the library is imported as `sacn`.
name = "sacn"

[features]
default = ["std", "tokio"]
alloc = []
std = ["alloc", "thiserror/std"]
# The tokio runtime adapter.
tokio = ["std", "dep:tokio", "dep:socket2", "dep:if-addrs"]
# The embassy runtime adapter.
embassy = ["dep:embassy-net", "dep:embassy-time", "dep:embassy-futures"]
# Structured logging via the `tracing` crate.
tracing = ["dep:tracing"]
# Logging via the `log` crate facade.
log = ["dep:log"]
# Logging via `defmt`
defmt = ["dep:defmt", "embassy-net?/defmt"]
# `From`/`Into` conversions between `Cid` and `uuid::Uuid`.
uuid = ["dep:uuid"]

[dependencies]
thiserror = { version = "2.0.18", default-features = false }
heapless = "0.9.3"
derive-where = "1.6.1"
uuid = { version = "1.23.3", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "1.1", optional = true }

# Tokio adapter (feature-gated, std-only).
tokio = { version = "1.52.3", features = [
    "net",
    "time",
    "rt",
    "macros",
], optional = true }
socket2 = { version = "0.6.4", features = ["all"], optional = true }
if-addrs = { version = "0.15.0", optional = true }
tracing = { version = "0.1.44", optional = true }

# Embassy adapter (feature-gated, no_std).
embassy-net = { version = "0.9.1", default-features = false, features = [
    "udp",
    "proto-ipv4",
    "proto-ipv6",
    "medium-ethernet",
    "multicast",
], optional = true }
embassy-time = { version = "0.5.1", default-features = false, optional = true }
embassy-futures = { version = "0.1.2", optional = true }

[dev-dependencies]
fastrand = "2.3.0"
proptest = "1.11.0"
static_cell = "2.1.1"
public-api = "0.52"
rustdoc-json = "0.9"

# The tokio adapter integration tests and the examples need a runtime and a few
# extra tokio features beyond what the library proper uses
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "signal"] }

# TUI example dependencies.
ansi-to-tui = "8.0.1"
anyhow = "1.0.95"
crossterm = "0.29.0"
ratatui = "0.30.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.19"
uuid = { version = "1.23.3", default-features = false, features = ["v4"] }

[[example]]
name = "basic_receiver"
required-features = ["tokio", "tracing"]

[[example]]
name = "merge_receiver"
required-features = ["tokio", "tracing"]

[[example]]
name = "source"
required-features = ["tokio", "tracing", "uuid"]

[[example]]
name = "source_console"
required-features = ["tokio", "tracing", "uuid"]

[[example]]
name = "source_detector"
required-features = ["tokio", "tracing"]

[[example]]
name = "synchronization"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
