[package]
name = "sacn-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.x39-sacn]
path = ".."
# The core codec needs only `alloc`; keep the fuzz build minimal (no tokio).
default-features = false
features = ["alloc"]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
