[workspace]

[package]
name = "sacn-embassy-example"
version = "0.1.0"
edition = "2024"

[dependencies]
x39-sacn = { path = "../..", default-features = false, features = [
  "embassy",
  "defmt",
  "uuid",
] }

embassy-stm32 = { version = "0.6.0", features = [
  "defmt",
  "stm32f439zi",
  "memory-x",
  "time-driver-tim5",
] }
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.1", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-net = { version = "0.9.1", features = [
  "medium-ethernet",
  "proto-ipv4",
  "proto-ipv6",
  "dhcpv4",
  "udp",
  "multicast",
] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
uuid = { version = "1.23.4", default-features = false, features = ["v5"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"


[profile.release]
debug = 2
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
